#770: Fix Java 8 compatibility issue